# otter

./: .gitignore  LICENSE.txt  pyproject.toml  readme.md  train_slurm.sh
otter/data/: __init__.py  dataset.py  obs_transforms.py  traj_transforms.py
otter/data/dexycb_data/dexycb_dataset/: CITATIONS.bib  README.md  checksums.tsv  dex_ycb_custom.py  dexycb_dataset_dataset_builder.py  dexycb_dataset_dataset_builder_test.py
otter/data/libero/: libero_utils.py  robot_utils.py
otter/data/libero/libero_dataset/: CITATIONS.bib  README.md  checksums.tsv  libero_dataset.py  libero_dataset_dataset_builder.py  libero_dataset_dataset_builder_test.py  visualize_libero.py
otter/data/oxe/: __init__.py  oxe_dataset_configs.py  oxe_dataset_mixes.py  oxe_standardization_transforms.py  oxe_standardization_transforms_hbrl.py
otter/data/utils/: data_utils.py  goal_relabeling.py  task_augmentation.py  text_processing.py  utils.py
otter/dataset/: image_dataset.py
otter/policy/: models.py  otter.py  otter_interface.py  transformer.py  vision_tf.py
otter/util/: args.py  engine.py  lr_sched.py  misc.py  module_spec.py
script/: clip_visualization.py  droid_inference.py  eval_libero.py  open_clip_visualization.py  train.py
tests/: test_dummy_model.py  test_otter_interface.py  test_trained_model.py
